--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/ingress/secret.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/ingress/secret.yaml
@@ -18,7 +18,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: "{{ template "harbor.ingress" . }}"
-  namespace: istio-system
+  namespace: neon-ingress
   labels:
 {{ include "harbor.labels" . | indent 4 }}
 type: kubernetes.io/tls
