--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/kube-state-metrics/templates/psp-clusterrole.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/kube-state-metrics/templates/psp-clusterrole.yaml
@@ -7,7 +7,7 @@ metadata:
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-  name: psp-{{ template "kube-state-metrics.fullname" . }}
+  name: {{ template "kube-state-metrics.fullname" . }}-psp
 rules:
 {{- $kubeTargetVersion := default .Capabilities.KubeVersion.GitVersion .Values.kubeTargetVersionOverride }}
 {{- if semverCompare "> 1.15.0-0" $kubeTargetVersion }}
