--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/kube-state-metrics/templates/psp-clusterrolebinding.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/kube-state-metrics/templates/psp-clusterrolebinding.yaml
@@ -7,11 +7,11 @@ metadata:
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-  name: psp-{{ template "kube-state-metrics.fullname" . }}
+  name: {{ template "kube-state-metrics.fullname" . }}-psp
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: psp-{{ template "kube-state-metrics.fullname" . }}
+  name: {{ template "kube-state-metrics.fullname" . }}-psp
 subjects:
   - kind: ServiceAccount
     name: {{ template "kube-state-metrics.fullname" . }}
