--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/kube-state-metrics/templates/stsdiscovery-role.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/kube-state-metrics/templates/stsdiscovery-role.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: stsdiscovery-{{ template "kube-state-metrics.fullname" . }}
+  name: {{ template "kube-state-metrics.fullname" . }}-stsdiscovery
   namespace: {{ template "kube-state-metrics.namespace" . }}
   labels:
     app.kubernetes.io/name: {{ template "kube-state-metrics.name" . }}
