--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/kube-state-metrics/templates/stsdiscovery-rolebinding.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/kube-state-metrics/templates/stsdiscovery-rolebinding.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: stsdiscovery-{{ template "kube-state-metrics.fullname" . }}
+  name: {{ template "kube-state-metrics.fullname" . }}-stsdiscovery
   namespace: {{ template "kube-state-metrics.namespace" . }}
   labels:
     app.kubernetes.io/name: {{ template "kube-state-metrics.name" . }}
@@ -12,7 +12,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: stsdiscovery-{{ template "kube-state-metrics.fullname" . }}
+  name: {{ template "kube-state-metrics.fullname" . }}-stsdiscovery
 subjects:
   - kind: ServiceAccount
     name: {{ template "kube-state-metrics.fullname" . }}
