--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/prometheus-node-exporter/templates/psp-clusterrole.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/prometheus-node-exporter/templates/psp-clusterrole.yaml
@@ -3,7 +3,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: psp-{{ template "prometheus-node-exporter.fullname" . }}
+  name: {{ template "prometheus-node-exporter.fullname" . }}-psp
   labels: {{ include "prometheus-node-exporter.labels" . | indent 4 }}
 rules:
 - apiGroups: ['extensions']
