--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/prometheus-node-exporter/templates/psp-clusterrolebinding.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/prometheus-node-exporter/templates/psp-clusterrolebinding.yaml
@@ -3,12 +3,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: psp-{{ template "prometheus-node-exporter.fullname" . }}
+  name: {{ template "prometheus-node-exporter.fullname" . }}-psp
   labels: {{ include "prometheus-node-exporter.labels" . | indent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: psp-{{ template "prometheus-node-exporter.fullname" . }}
+  name: {{ template "prometheus-node-exporter.fullname" . }}-psp
 subjects:
   - kind: ServiceAccount
     name: {{ template "prometheus-node-exporter.fullname" . }}
