--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/prometheus-node-exporter/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/charts/prometheus-node-exporter/values.yaml
@@ -2,6 +2,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+nameOverride: node-exporter
+
 service:
   type: ClusterIP
   port: 9100
