--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/alertmanager/alertmanager.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/alertmanager/alertmanager.yaml
@@ -2,7 +2,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: Alertmanager
 metadata:
-  name: {{ template "kube-prometheus-stack.fullname" . }}-alertmanager
+  name: {{ template "kube-prometheus-stack.fullname" . }}
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
     app: {{ template "kube-prometheus-stack.name" . }}-alertmanager
