--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/alertmanager/secret.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/alertmanager/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: alertmanager-{{ template "kube-prometheus-stack.fullname" . }}-alertmanager
+  name: {{ template "kube-prometheus-stack.fullname" . }}-alertmanager
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
 {{- if .Values.alertmanager.secret.annotations }}
   annotations:
