--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/prometheus-operator/clusterrole.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/prometheus-operator/clusterrole.yaml
@@ -4,7 +4,7 @@ kind: ClusterRole
 metadata:
   name: {{ template "kube-prometheus-stack.fullname" . }}-operator
   labels:
-    app: {{ template "kube-prometheus-stack.name" . }}-operator
+    app: {{ template "kube-prometheus-stack.operator.fullname" . }}
 {{ include "kube-prometheus-stack.labels" . | indent 4 }}
 rules:
 - apiGroups:
