--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/prometheus-operator/psp-clusterrolebinding.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/prometheus-operator/psp-clusterrolebinding.yaml
@@ -4,7 +4,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ template "kube-prometheus-stack.fullname" . }}-operator-psp
   labels:
-    app: {{ template "kube-prometheus-stack.name" . }}-operator
+    app: {{ template "kube-prometheus-stack.operator.fullname" . }}
 {{ include "kube-prometheus-stack.labels" . | indent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
