--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/prometheus/service.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/prometheus/service.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "kube-prometheus-stack.fullname" . }}-prometheus
+  name: {{ template "kube-prometheus-stack.fullname" . }}
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    app: {{ template "kube-prometheus-stack.name" . }}-prometheus
+    app: {{ template "kube-prometheus-stack.name" . }}
     self-monitor: {{ .Values.prometheus.serviceMonitor.selfMonitor | quote }}
 {{ include "kube-prometheus-stack.labels" . | indent 4 }}
 {{- if .Values.prometheus.service.labels }}
