--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/registry/registry-dpl.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/registry/registry-dpl.yaml
@@ -74,12 +74,12 @@ spec:
         - name: REGISTRY_STORAGE_S3_ACCESSKEY
           valueFrom:
             secretKeyRef:
-              name: neon-system-minio
+              name: minio
               key: accesskey
         - name: REGISTRY_STORAGE_S3_SECRETKEY
           valueFrom:
             secretKeyRef:
-              name: neon-system-minio
+              name: minio
               key: secretkey
         {{- if has "registry" .Values.proxy.components }}
         - name: HTTP_PROXY
