[tools/neon-build]: Added the [hexdump] command

--- a/ToolBin/neon-build/neon-build.runtimeconfig.json
+++ b/ToolBin/neon-build/neon-build.runtimeconfig.json
@@ -1,9 +1,9 @@
 {
   "runtimeOptions": {
-    "tfm": "net5.0",
+    "tfm": "netcoreapp3.1",
     "framework": {
       "name": "Microsoft.NETCore.App",
-      "version": "5.0.3"
+      "version": "3.1.14"
     },
     "configProperties": {
       "System.GC.Concurrent": true,
