--- a/Tools/unix-text/unix-text.csproj
+++ b/Tools/unix-text/unix-text.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>UnixText</RootNamespace>
     <LangVersion>latest</LangVersion>
     <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
