fix HA citus deployment

--- a/Lib/Neon.Kube/Resources/Helm/citus-postgresql/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/citus-postgresql/values.yaml
@@ -41,11 +41,11 @@ worker:
   #    memory: 1Gi
   persistence:
     size: 5Gi
-    storageClassName: openebs-hostpath
+    storageClassName: neon-internal-citus
 
 ## Citus Master
 master:
-  replicas: 3
+  replicas: 1
   citusType: "citus-master"
   extraConfigs:
   resources: {}
@@ -57,7 +57,7 @@ master:
   #    memory: 1Gi
   persistence:
     size: 5Gi
-    storageClassName: openebs-hostpath
+    storageClassName: neon-internal-citus
 
 
 ## Citus Master Service
