--- a/Lib/Neon.Kube/Resources/Helm/citus-postgresql/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/citus-postgresql/values.yaml
@@ -22,7 +22,6 @@ tolerations:
 ## 
 persistence:
   enabled: true
-  storageClass: "neon-internal-citus"
   accessMode: ReadWriteOnce
 
 ## Citus Worker
@@ -41,7 +40,7 @@ worker:
   #    memory: 1Gi
   persistence:
     size: 5Gi
-    storageClassName: neon-internal-citus
+    storageClassName: neon-internal-citus-worker
 
 ## Citus Master
 master:
@@ -57,7 +56,7 @@ master:
   #    memory: 1Gi
   persistence:
     size: 5Gi
-    storageClassName: neon-internal-citus
+    storageClassName: neon-internal-citus-master
 
 
 ## Citus Master Service
