[test]: automation in progress

--- a/Test/Test.Neon.Cadence.net/packages.config
+++ b/Test/Test.Neon.Cadence.net/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotLiquid" version="2.1.405" targetFramework="net48" />
   <package id="Humanizer.Core" version="2.8.26" targetFramework="net48" />
+  <package id="LiquidTestReports.Core" version="1.1.1-beta" targetFramework="net48" />
+  <package id="LiquidTestReports.Markdown" version="1.1.1-beta" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis" version="3.8.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.1" targetFramework="net48" developmentDependency="true" />
@@ -38,17 +41,19 @@
   <package id="Microsoft.Extensions.Primitives" version="3.1.13" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Server" version="1.1.4" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.TestPlatform.ObjectModel" version="16.9.1" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="Microsoft.Win32.SystemEvents" version="4.7.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="NuGet.Frameworks" version="5.0.0" targetFramework="net48" />
   <package id="prometheus-net" version="4.0.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
-  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Composition" version="5.0.0" targetFramework="net48" />
   <package id="System.Composition.AttributedModel" version="5.0.0" targetFramework="net48" />
   <package id="System.Composition.Convention" version="5.0.0" targetFramework="net48" />
