--- a/Test/Test.Neon.Cadence/Test.Neon.Cadence.csproj
+++ b/Test/Test.Neon.Cadence/Test.Neon.Cadence.csproj
@@ -34,6 +34,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="LiquidTestReports.Markdown" Version="1.1.1-beta" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.13" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.13" />
     <PackageReference Include="Microsoft.Net.Http.Server" Version="1.1.4" />
