--- a/Test/Test.Neon.ModelGen/Test.Neon.ModelGen.csproj
+++ b/Test/Test.Neon.ModelGen/Test.Neon.ModelGen.csproj
@@ -34,6 +34,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Linq2Couchbase" Version="1.4.2" />
+    <PackageReference Include="LiquidTestReports.Markdown" Version="1.1.1-beta" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.13" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.13" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.13" />
