--- a/Test/Test.Neon.YugaByte/Test.Neon.YugaByte.csproj
+++ b/Test/Test.Neon.YugaByte/Test.Neon.YugaByte.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiquidTestReports.Markdown" Version="1.1.1-beta" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
     <PackageReference Include="Npgsql" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
