[images]: Fixed ubuntu/dotnet based container images.
These got screwed up several weeks ago when decided to base our images directly off the official MSFT images rather than using oiur own copies.

The problem is that our copies included the common scripts, configured UTC TZ and also prioritiizwed IPv4 DNS looks over IPv6 and we lost all of these.  I've added these all back into the individual Dockerfiles.

--- a/Images/couchbase-dev/Dockerfile
+++ b/Images/couchbase-dev/Dockerfile
@@ -26,10 +26,17 @@ FROM        couchbase/server:${VERSION}
 MAINTAINER  jeff@lilltek.com
 STOPSIGNAL  SIGTERM
 
+# Environment
+
+ENV TZ=UTC
+ENV DEBIAN_FRONTEND noninteractive
+ENV DOTNET_CLI_TELEMETRY_OPTOUT=1
+
+# Configure
+
 COPY entrypoint.sh      /
 COPY init-cluster.sh    /
 
-RUN chmod 700 /*.sh
-
-# Set timezone to UTC
-ENV TZ=UTC
+RUN chmod 700 /*.sh \
+    && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone \
+    && sed -i 's!^#precedence ::ffff:0:0/96  10$!precedence ::ffff:0:0/96  100!g' /etc/gai.conf
