--- a/Images/test-temporal/Dockerfile
+++ b/Images/test-temporal/Dockerfile
@@ -28,6 +28,14 @@ MAINTAINER  marcus@euarctos.com
 STOPSIGNAL  SIGTERM
 ARG         APPNAME
 
+# Environment
+
+ENV TZ=UTC
+ENV DEBIAN_FRONTEND noninteractive
+ENV DOTNET_CLI_TELEMETRY_OPTOUT=1
+
+COPY _common/*              /
+
 # Add the application files in two layers.  The first will contain the dependencies
 # and the second will contain the application files.  This should result in more
 # efficient images because depdencies tend to be more stable than application files.
@@ -38,19 +46,18 @@ ARG         APPNAME
 # Dependencies
 
 COPY bin/__dep              /usr/bin/$APPNAME.dotnet/
-RUN echo ** NEW LAYER **
-
-ENV TZ=UTC
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN echo **NEW LAYER**
 
 # App files.
 
 COPY bin/__app              /usr/bin/$APPNAME.dotnet/
 COPY docker-entrypoint.sh   /
 
-RUN chmod 700 /docker-entrypoint.sh \
+RUN chmod 700 /*.sh \
     && echo "#!/bin/sh" > /usr/bin/$APPNAME \ 
     && echo "exec dotnet /usr/bin/$APPNAME.dotnet/$APPNAME.dll \"\$@\"" >> /usr/bin/$APPNAME \
-    && chmod 770 /usr/bin/$APPNAME
+    && chmod 770 /usr/bin/$APPNAME \
+    && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone \
+    && sed -i 's!^#precedence ::ffff:0:0/96  10$!precedence ::ffff:0:0/96  100!g' /etc/gai.conf
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
