--- a/Go/test/temporal/config.yaml
+++ b/Go/test/temporal/config.yaml
@@ -1,4 +1,4 @@
 # config for sample
 namespace: "test-namespace"
 service: "temporal-frontend"
-hostport: "127.0.0.1:7233"
+hostport: "127.0.0.1:7233
