--- a/Go/GoBuilder/GoBuilder.csproj
+++ b/Go/GoBuilder/GoBuilder.csproj
@@ -27,7 +27,7 @@
   </PropertyGroup>
 
   <Target Name="GoBuild" AfterTargets="BeforeCompile">
-    <Exec Command="powershell -file &quot;$(SolutionDir)Go\build-all.ps1&quot; -buildConfig $(Configuration)" />
+    <Exec Command="pwsh -file &quot;$(SolutionDir)Go\build-all.ps1&quot; -buildConfig $(Configuration)" />
   </Target>
 
 </Project>
