--- a/Lib/Neon.Couchbase/Neon.Couchbase.csproj
+++ b/Lib/Neon.Couchbase/Neon.Couchbase.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net48; netcoreapp3.1; net5.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <RootNamespace>Neon.Couchbase</RootNamespace>
     <Authors>neonFORGE Team</Authors>
@@ -54,7 +54,7 @@
     <PackageReference Include="CouchbaseNetClient" Version="2.7.22" />
     <PackageReference Include="Linq2Couchbase" Version="1.4.2" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.13" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
