--- a/Test/Test.Neon.Cryptography/Test.Neon.Cryptography.csproj
+++ b/Test/Test.Neon.Cryptography/Test.Neon.Cryptography.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFrameworks>net48; netcoreapp3.1; net5.0</TargetFrameworks>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <IsPackable>false</IsPackable>
     <LangVersion>latest</LangVersion>
